# quickBall

./: CMakeLists.txt  README.md
cmake/: FindGLM.cmake
data/: background.rgb  fence.rgb  ground.rgb  lopta.rgb  spider.rgb
src/: asteroid.cpp  back.cpp  back.h  camera.cpp  camera.h  combined.cpp  combined.h  enemy.cpp  enemy.h  enemyAnimate.cpp  enemyAnimate.h  fence.cpp  fence.h  generator.cpp  generator.h  ground.cpp  ground.h  heart.cpp  heart.h  main.cpp  object.cpp  object.h  player.cpp  player.h  portal.cpp  portal.h  scene.cpp  scene.h  test1.cpp  test1.h  titlescreen.cpp  titlescreen.h  word.cpp  word.h
src/glsl/: back_frag.glsl  back_vert.glsl  object_frag.glsl  object_frag_mono.glsl  object_vert_anim.glsl  text_frag.glsl  text_vert.glsl
src/lib/: mesh.cpp  meshAnimate.cpp  meshAnimate.h  plane.cpp  plane.h  shader.cpp  texts.cpp  texts.h
